<resources>
    <string name="app_name">Govt. Board Exam HP</string>
    <string name="form_head">FORM DE-1 \n
    [See Rule 7(1)]\n
    GOVERNMENT OF HIMACHAL PRADESH\n
    BOARD OF DEPARTMENTAL EXAMINATIONS"\n
    </string>

    <string name="Part1"><b><u>PART-I</u></b></string>
    <string name="ApplicationHead">Application Form (DE-1) For Appearing In The Departmental Examninations</string>

    <string name="Exam">Chose your exam</string>
    <string-array name="Exam_name">
        <item>IPS</item>
        <item>IAS</item>
        <item>HAS</item>


    </string-array>


    <string name="Designation">Chose your designation</string>
    <string-array name="Desig">
        <item>J.E</item>
        <item>A.E</item>
        <item>E.E</item>


    </string-array>

    <string name="cadreName">Chose your Cadre</string>
    <string-array name="cadre">
        <item>Quick Diagnostics</item>
        <item>Partial Qualitative CaDRE</item>
        <item>Partial Quantitative CaDRE</item>
        <item>Full Qualitative CaDRE</item>
        <item>Full Qualitative and Quantitative CaDRE</item>


    </string-array>
    <string name="radio_yes">Yes</string>
    <string name="radio_No">No</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home_choice">homeChoice</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_online">Apply Online</string>
    <string name="title_download">Download form</string>
    <string name="login_sign_up">Login/Sign Up</string>
    <string name="login">Login</string>
    <string name="menu">Menu</string>
    <string name="title_activity_drawer">drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="StringUser">user@user.com</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="view_form_submitted">View Form Submitted</string>
    <string name="reset_password">Reset Password</string>
    <string name="back"><![CDATA[<<Back]]></string>


</resources>
