<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"

    tools:context="com.ankushinc.thereddragon.govtboardexamhp.ChangePassword">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/change_pass_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/change_pass_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        >

        <LinearLayout
            android:id="@+id/old_pass_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/hp"
                />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                >

                <EditText
                    android:id="@+id/change_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/change_pass_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/reset_password"
                android:textStyle="bold"
                android:textSize="20dp"
                android:background="@drawable/button_states1"
                android:onClick="onChangePass"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="A mail on your registered address will be sent with the reset link"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/black"

                />
            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:text="@string/back"
                android:layout_gravity="center"
                android:textColor="@color/appblue" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
